app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reksmeys-react-tail-svc
spec:
  selector:
    app: reksmeys-react-tail
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
